[package]
name = "konfig"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A unified configuration management library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/konfig"
keywords = ["config", "configuration", "cli", "environment", "settings"]
categories = ["config", "command-line-interface"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1.0"
once_cell = "1.19"
tracing = "0.1"

[dependencies.konfig_derive]
path = "konfig_derive"
version = "0.1.0"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"

[workspace]
members = ["konfig_derive"]
