[package]
name = "gonfig"
version = "0.1.6"
edition = "2021"
authors = ["Vasanthkumar Kalaiselvan<itsparser@gmail.com>"]
description = "A unified configuration management library for Rust that seamlessly integrates environment variables, config files, and CLI arguments"
license = "MIT OR Apache-2.0"
repository = "https://github.com/itsparser/gonfig"
documentation = "https://docs.rs/gonfig"
homepage = "https://github.com/itsparser/gonfig"
readme = "README.md"
keywords = ["config", "configuration", "cli", "environment", "settings"]
categories = ["config", "command-line-interface"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE*", "examples/**/*"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1.0"
once_cell = "1.19"
tracing = "0.1"

[dependencies.gonfig_derive]
version = "0.1.5"
path = "gonfig_derive"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
rusty-hook = "^0.11.2"

[workspace]
members = ["gonfig_derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.rusty-hook]
version = "1"

[package.metadata.rusty-hook.hooks]
pre-commit = [
    "cargo fmt --all -- --check",
    "cargo clippy --all-targets --all-features -- -D warnings",
    "cargo test -- --test-threads=1"
]
