[package]
name = "gonfig_derive"
version = "0.1.7"
edition = "2021"
authors = ["Vasanthkumar Kalaiselvan<itsparser@gmail.com>"]
description = "Derive macros for the gonfig configuration management library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/itsparser/gonfig"
documentation = "https://docs.rs/gonfig_derive"
homepage = "https://github.com/itsparser/gonfig"
keywords = ["config", "configuration", "derive", "macro"]
categories = ["config", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"
